--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,62 @@
+alembic==1.13.3
+aniso8601==9.0.1
+appnope==0.1.4
+asttokens==2.4.1
+attrs==24.2.0
+backcall==0.2.0
 certifi==2024.8.30
+click==8.1.7
+decorator==5.1.1
 distlib==0.3.9
+executing==2.1.0
+Faker==14.2.0
 filelock==3.16.1
+Flask==2.2.2
+flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.0.3
+greenlet==3.1.1
+gunicorn==23.0.0
+importlib-metadata==6.0.0
+importlib-resources==5.10.0
+iniconfig==2.0.0
+ipdb==0.13.9
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+Mako==1.3.5
+MarkupSafe==2.1.5
+marshmallow==3.18.0
+marshmallow-sqlalchemy==0.28.1
+matplotlib-inline==0.1.7
 packaging==24.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
 pipenv==2024.1.0
 platformdirs==4.3.6
-virtualenv==20.26.6
+pluggy==1.5.0
+prompt_toolkit==3.0.48
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py==1.11.0
+Pygments==2.18.0
+pytest==7.1.3
+python-dateutil==2.9.0.post0
+pytz==2024.2
+shell==1.0.1
+six==1.16.0
+SQLAlchemy==2.0.36
+SQLAlchemy-serializer==1.4.12
+stack-data==0.6.3
+toml==0.10.2
+tomli==2.0.2
+traitlets==5.14.3
+typing_extensions==4.12.2
+virtualenv==20.27.0
+wcwidth==0.2.13
+Werkzeug==2.2.2
+zipp==3.20.2
