--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ appnope==0.1.4
 asttokens==2.4.1
 attrs==24.2.0
 backcall==0.2.0
+bcrypt==4.2.0
 certifi==2024.8.30
 click==8.1.7
 decorator==5.1.1
@@ -12,6 +13,7 @@ executing==2.1.0
 Faker==14.2.0
 filelock==3.16.1
 Flask==2.2.2
+Flask-Bcrypt==1.0.1
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.10
