--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ ipython==8.12.3
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
-Mako==1.3.5
+Mako==1.3.6
 MarkupSafe==2.1.5
 marshmallow==3.18.0
 marshmallow-sqlalchemy==0.28.1
@@ -48,6 +48,7 @@ py==1.11.0
 Pygments==2.18.0
 pytest==7.1.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 shell==1.0.1
 six==1.16.0
