--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Faker==14.2.0
 filelock==3.16.1
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
+Flask-Cors==5.0.0
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.10
